unity (6.0.0-0ubuntu2) UNRELEASED; urgency=low

  * Cherry pick upstream fixes.
    - [regression] [unity 6.0] Fullscreen windows flicker and/or never redraw 
      properly if panel_opacity<1.0 or dash is opened (LP: #1024911)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Mon, 16 Jul 2012 14:48:14 +0200

unity (6.0.0-0ubuntu1) quantal-proposed; urgency=low

  [ Didier Roche ]
  * debian/rules, debian/control, debian/unity-autopilot.install:
    - install new unity-autopilot package, containing autopilot bindings and
      test for Unity
    - add some python build-dep for executing setup.py
    - use dh_python2 and add some python:Depends dep for automatic python
      version detection
  * debian/control:
    - remove gnome-desktop dependency: not needed upstream anymore
    - unity Breaks older lenses due to path change
    - remove libgdu in build-dep
  * debian/libunity-core-6.0-5.install, debian/libunity-core-6.0-dev.install,
    debian/control:
    - version bump in libunity-core, change soname

  [ Matthieu Baerts (matttbe) ]
  * Update apport hook for python3 ; thanks to Edward Donovan (LP: #1013171)

  [ Łukasz 'sil2100' Zemczak ]
  * New upstream release.
    - compiz crashed with SIGSEGV in get_current_slide() from
      unity::BGHash::OnSlideshowTransition() (LP: #889625)
    - Unity is visible on top of fullscreen apps (LP: #734908)
    - App icon on the Unity Launcher lost track of running instance
      (LP: #772063)
    - unity crashed with NameError in reset_unity_compiz_profile(): global
      name 'GError' is not defined (LP: #778470)
    - compiz crashed with SIGSEGV in CompWindow::id() from getPaintMask()
      [compizminimizedwindowhandler.h] from unity::UnityWindow::glPaint()
      (LP: #851982)
    - HUD - Formatting of text in the auto-complete is wrong (LP: #939436)
    - [regression] Launcher is silent to screen reader users (LP: #949448)
    - still some accent issues with unity/nux (LP: #950740)